implementação real do AZ AI Service